--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
+  overflow: hidden;
+  image-rendering: pixelated;
+}
+
+canvas {
+  width: 100%;
+  background-color: blue;
 }
